# LocaleEmulatorLauncher

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: LEProc.txt
src/: arg_parser.hpp  cli.hpp  config.hpp  create_shortcut.cpp  ini.hpp  launcher.hpp  le_profile.hpp  main.cpp  target_resolver.hpp  types.hpp  utility.hpp
